testdata/baselines/reference/submodule/compiler/autoLift2.errors.txt
autoLift2.ts(5,17): error TS1005: ';' expected.
autoLift2.ts(5,19): error TS2693: 'any' only refers to a type, but is being used as a value here.
autoLift2.ts(6,17): error TS1005: ';' expected.
autoLift2.ts(6,19): error TS2693: 'any' only refers to a type, but is being used as a value here.


==== autoLift2.ts (4 errors) ====
    class A
    
    {
        constructor() {
            this.foo: any;
                    ~
!!! error TS1005: ';' expected.
                      ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
            this.bar: any;
                    ~
!!! error TS1005: ';' expected.
                      ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
        }
    
    
      baz() {
    
         this.foo = "foo";
    
         this.bar = "bar";
    
         [1, 2].forEach((p) => this.foo);
    
         [1, 2].forEach((p) => this.bar);
    
      }
    
    }
    
    
    
    var a = new A();
    
    a.baz();
    
    
    